Update cleverdesk frontend

--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE HTML>
-<html>
+<html ng-app>
 <head>
-
+  <link rel="stylsheet" href="bower_components/angular-material/angular-material.min.css"/>
+  <script src="bower_components/angular/angular.min.js"></script>
+  <script src="bower_components/angular-animate/angular-animate.min.js"></script>
+  <script src="bower_components/angular-route/angular-route.min.js"></script>
 </head>
 <body>
 
