Add label directive

--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE HTML>
-<html ng-app>
+<html ng-app="frontendApp">
 <head>
   <link rel="stylsheet" href="bower_components/angular-material/angular-material.min.css"/>
   <script src="bower_components/angular/angular.min.js"></script>
   <script src="bower_components/angular-animate/angular-animate.min.js"></script>
   <script src="bower_components/angular-route/angular-route.min.js"></script>
+  <script src="src/js/main.js"></script>
+  <script src="src/js/directives/label.js"></script>
 </head>
-<body>
+<body ng-controller="frontendCtrl">
 
 </body>
 </html>
