Integrate label directive

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
   <script src="src/js/controller/PageController.js"></script>
   <script src="src/js/services/communicator.js"></script>
   <script src="src/js/services/parser.js"></script>
+  <script src="src/js/directives/label.js"></script>
 </head>
 <body>
     <div ng-view></div>
