Integrate YouTube Video and Input Field directive

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
   <script src="src/js/services/communicator.js"></script>
   <script src="src/js/services/parser.js"></script>
   <script src="src/js/directives/label.js"></script>
+  <script src="src/js/directives/YouTubeVideo.js"></script>
+  <script src="src/js/directives/inputField.js"></script>
 </head>
 <body>
     <div ng-view></div>
