--- a/public/src/html/directives/inputField.html
+++ b/public/src/html/directives/inputField.html
@@ -1,2 +1,2 @@
-{{label}}
+<clever-label text="label"></clever-label>
 <input type="text" value="{{value}}" placeholder="{{placeholder}}" name="{{name}}" id="{{name}}"/>
