Add semantic ui

--- a/public/src/html/directives/checkbox.html
+++ b/public/src/html/directives/checkbox.html
@@ -1,2 +1,5 @@
-{{label}}
-<input type="checkbox" name="{{name}}" id="{{name}}" value="{{value}}"/>
+
+<div class="ui form checkbox">
+    <input type="checkbox" name="{{name}}" id="{{name}}" value="{{value}}"/>
+    <label>{{label}}</label>
+</div>
