--- a/public/src/html/directives/textarea.html
+++ b/public/src/html/directives/textarea.html
@@ -1,2 +1,4 @@
-{{label}}
-<textarea placeholder="{{placeholder}}" name="{{name}}" id="{{name}}">{{value}}</textarea>
+<div class="ui form field">
+    <label>{{label}}</label>
+    <textarea placeholder="{{placeholder}}" name="{{name}}" id="{{name}}">{{value}}</textarea>
+</div>
