--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,7 @@
   <script src="bower_components/angular/angular.min.js"></script>
   <script src="bower_components/angular-animate/angular-animate.min.js"></script>
   <script src="bower_components/angular-route/angular-route.min.js"></script>
-  <script src="src/js/main.js"></script>
-  <script src="src/js/routes.js"></script>
-  <script src="src/js/controller/MainController.js"></script>
-  <script src="src/js/controller/PageController.js"></script>
-  <script src="src/js/services/communicator.js"></script>
-  <script src="src/js/services/parser.js"></script>
-  <script src="src/js/directives/label.js"></script>
-  <script src="src/js/directives/YouTubeVideo.js"></script>
-  <script src="src/js/directives/inputField.js"></script>
+  <script src="cleverdesk-frontend.min.js"></script>
 </head>
 <body>
     <div ng-view></div>
