--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html ng-app="frontendApp">
 <head>
+  <title>Cleverdesk</title>
   <link rel="stylesheet" href="bower_components/semantic/dist/semantic.min.css">
   <script src="bower_components/angular/angular.min.js"></script>
   <script src="bower_components/angular-animate/angular-animate.min.js"></script>
