--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,9 @@
   <script src="bower_components/angular-route/angular-route.min.js"></script>
   <script src="cleverdesk-frontend.min.js"></script>
 </head>
-<body>
-    <div class="ui container" ng-view></div>
+<body ng-controller="MainController">
+    <div ng-include="'src/html/templates/header.html'"></div>
+    <div class="ui container" ng-view style="margin-top: 41px; margin-bottom: 41px;"></div>
+    <div ng-include="'src/html/templates/footer.html'"></div>
 </body>
 </html>
